samples/_failures_safe/1761252150_2583e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d79d529f.c: In function ‘print_buffer’:
./samples/SAFE/__tmp_d79d529f.c:122:21: error: expected ‘)’ at end of input
  122 |     if (buffer->size
      |        ~            ^
      |                     )
./samples/SAFE/__tmp_d79d529f.c:122:5: error: expected declaration or statement at end of input
  122 |     if (buffer->size
      |     ^~
